--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -6,4 +6,6 @@ pipelineConfig:
   env:
   - name: DEPLOY_NAMESPACE
     value: jx-staging
+  - name: CHART_MUSEUM
+    value: http://chartmuseum.jx.35.189.204.50.nip.io
   pipelines: {}
